--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express-handlebars": "^8.0.1",
+    "handlebars": "^4.7.8",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
